name:                dynobud-typevecs
version:             1.10.0.0
synopsis:            your dynamic optimization buddy
description:         See readme at <http://www.github.com/ghorn/dynobud http://www.github.com/ghorn/dynobud>
license:             LGPL-3
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           (c) Greg Horn 2013-2018
category:            Science
build-type:          Simple
cabal-version:       >=1.10
stability:           Experimental

source-repository head
  type:     git
  location: git://github.com/ghorn/dynobud.git

library
  exposed-modules:     Dyno.TypeVecs

  build-depends:       base >=4.6 && < 5,
                       dynobud-vectorize,
                       vector >=0.10,
                       vector-binary-instances,
                       linear >= 1.3.1.1,
                       reflection >= 1.3.2,
                       binary,
                       distributive,
                       generic-accessors >= 0.7.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Werror -fwarn-redundant-constraints
  cc-options:          -Wall -Wextra

