name:                dynobud-vectorize
version:             1.10.0.0
synopsis:            your dynamic optimization buddy
description:         See readme at <http://www.github.com/ghorn/dynobud http://www.github.com/ghorn/dynobud>
license:             LGPL-3
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           (c) Greg Horn 2013-2018
category:            Science
build-type:          Simple
cabal-version:       >=1.10
stability:           Experimental

source-repository head
  type:     git
  location: git://github.com/ghorn/dynobud.git

library
  exposed-modules:     Dyno.Random
                       Dyno.Vectorize

  build-depends:       base >=4.6 && < 5,
                       data-default-class,
                       jacobi-roots >=0.2 && <0.3,
                       spatial-math >= 0.4.0.0,
                       vector >=0.10,
                       vector-binary-instances,
                       mtl >=2.2.1,
                       containers >=0.5,
                       hmatrix >= 0.17.0.1,
                       hmatrix-gsl >= 0.17.0.0,
                       lens,
                       linear >= 1.3.1.1,
                       reflection >= 1.3.2,
                       aeson,
                       binary,
                       distributive,
                       process,
                       Plot-ho-matic >= 0.12.2.2,
                       generic-accessors >= 0.7.0.0,
                       time,
                       directory,
                       TypeCompose >= 0.9.12,
                       typelits-witnesses,
                       mwc-random
--                       cplex
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Werror -fwarn-redundant-constraints
  cc-options:          -Wall -Wextra
