name:                dynobud
version:             1.10.0.0
synopsis:            your dynamic optimization buddy
description:         See readme at <http://www.github.com/ghorn/dynobud http://www.github.com/ghorn/dynobud>
license:             LGPL-3
author:              Greg Horn
maintainer:          gregmainland@gmail.com
copyright:           (c) Greg Horn 2013-2018
category:            Science
build-type:          Simple
cabal-version:       >=1.10
stability:           Experimental

source-repository head
  type:     git
  location: git://github.com/ghorn/dynobud.git

library
  exposed-modules:     Dyno.FormatTime
                       Dyno.LagrangePolynomials
                       Dyno.MultipleShooting
                       Dyno.SimpleOcp
                       Dyno.Ocp
                       Dyno.OcpHomotopy
                       Dyno.DirectCollocation
                       Dyno.DirectCollocation.ActiveConstraints
                       Dyno.DirectCollocation.CheckAccuracy
                       Dyno.DirectCollocation.Dynamic
                       Dyno.DirectCollocation.Export
                       Dyno.DirectCollocation.Formulate
                       Dyno.DirectCollocation.FormulateCov
                       Dyno.DirectCollocation.Integrate
                       Dyno.DirectCollocation.Interpolate
                       Dyno.DirectCollocation.Quadratures
                       Dyno.DirectCollocation.Robust
                       Dyno.DirectCollocation.ScaleFactors
                       Dyno.DirectCollocation.Types
                       Dyno.Fitting
                       Dyno.GoldenSectionSearch
                       Dyno.Integrate
                       Dyno.KalmanFilter
                       Dyno.Linearize
                       Dyno.Sqp.LineSearch
                       Dyno.View
                       Dyno.View.Conditional
                       Dyno.View.Cov
--                       Dyno.View.CustomFunction
                       Dyno.View.Fun
                       Dyno.View.HList
                       Dyno.View.InterpolantOrphans
                       Dyno.View.JVec
                       Dyno.View.M
                       Dyno.View.MapFun
                       Dyno.View.Scheme
                       Dyno.View.Unsafe
                       Dyno.View.View
                       Dyno.Nlp
                       Dyno.NlpScaling
                       Dyno.NlpSolver
                       Dyno.NlpUtils
                       Dyno.Solvers
                       Dyno.SolverInternal
--                       Dyno.Sqp.Sqp
--                       Dyno.Sqp.LineSearch

  other-modules:

  build-depends:       base >=4.6 && < 5,
                       casadi-bindings >= 3.4.5.0,
                       casadi-bindings-core >= 3.4.5.0,
--                       casadi-bindings-internal,
                       data-default-class,
                       dynobud-interpolant,
                       dynobud-typevecs,
                       dynobud-vectorize,
                       jacobi-roots >=0.2 && <0.3,
                       spatial-math >= 0.4.0.0,
                       vector >=0.10,
                       vector-binary-instances,
                       mtl >=2.2.1,
                       containers >=0.5,
                       hmatrix >= 0.17.0.1,
                       hmatrix-gsl >= 0.17.0.0,
                       lens,
                       linear >= 1.3.1.1,
                       reflection >= 1.3.2,
                       aeson,
                       binary,
                       distributive,
                       process,
                       Plot-ho-matic >= 0.12.2.2,
                       generic-accessors >= 0.7.0.0,
                       time,
                       directory,
                       TypeCompose >= 0.9.12,
                       singletons,
                       mwc-random
--                       cplex
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Werror -fwarn-redundant-constraints
  cc-options:          -Wall -Wextra

flag examples
    description:    build the examples
    default:        False

executable kalman-filter
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             EKF.hs
  default-language:    Haskell2010
  build-depends:       base >=4.6 && < 5
                       , casadi-bindings
                       , dynobud
                       , dynobud-typevecs
                       , dynobud-vectorize
                       , linear
                       , Chart >= 1.5.4
                       , Chart-cairo >= 1.5.4
                       , lens
                       , colour
                       , data-default-class
  ghc-options:         -O2 -Wall -Werror -fwarn-redundant-constraints

executable nlp-solver
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             NlpSolverEx.hs
  default-language:    Haskell2010
  build-depends:       dynobud
                       , dynobud-vectorize
                       , base >=4.6 && < 5
                       , casadi-bindings
  ghc-options:         -O2 -Wall -Werror -fwarn-redundant-constraints

executable toy-ocp
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             ToyOcp.hs
  default-language:    Haskell2010
  build-depends:       dynobud
                       , dynobud-vectorize
                       , base >=4.6 && < 5
  ghc-options:         -O2 -Wall -Werror -fwarn-redundant-constraints


executable multiple_shooting
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             MultipleShooting.hs
  default-language:    Haskell2010
  build-depends:       dynobud
                       , dynobud-vectorize
                       , base >=4.6 && < 5
                       , casadi-bindings
                       , vector
                       , linear
                       , Chart >= 1.5.4
                       , Chart-cairo >= 1.5.4
                       , lens
                       , colour
                       , data-default-class
  ghc-options:         -O2 -Wall -Werror -fwarn-redundant-constraints


executable sofa-viz-2000
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             SofaVisualizer.hs
  other-modules:       Sofa.Common
  default-language:    Haskell2010
  build-depends:       dynobud,
                       dynobud-typevecs,
                       dynobud-vectorize,
                       base >=4.6 && < 5,
                       not-gloss >= 0.7.4.0,
                       stm,
                       containers,
                       binary,
                       linear,
                       bytestring,
                       zeromq4-haskell,
                       vector
  ghc-options:         -O2 -Wall -Werror -threaded -fwarn-redundant-constraints

executable sofa-expand-o-matic
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             SofaExpando.hs
  other-modules:       Sofa.Common
  default-language:    Haskell2010
  build-depends:       dynobud,
                       dynobud-typevecs,
                       dynobud-vectorize,
                       vector,
                       casadi-bindings-core,
                       zeromq4-haskell,
                       bytestring,
                       binary,
                       linear,
                       base >= 4.6 && < 5
  ghc-options:         -threaded -O2 -Wall -Werror -fwarn-redundant-constraints

executable homotopy
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             Homotopy.hs
  default-language:    Haskell2010
  build-depends:       dynobud,
                       vector,
                       casadi-bindings,
                       base >= 4.6 && < 5
  ghc-options:         -threaded -O2 -Wall -Werror -fwarn-redundant-constraints

executable vec
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             Vec.hs
  default-language:    Haskell2010
  build-depends:       dynobud
                     , dynobud-typevecs
                     , dynobud-vectorize
                     , vector >=0.10,
                       base >=4.6 && < 5

  ghc-options:         -threaded -O2 -Wall -Werror -fwarn-redundant-constraints

executable parallel-map
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             ParallelMap.hs
  default-language:    Haskell2010
  build-depends:       dynobud,
                       dynobud-typevecs,
                       dynobud-vectorize,
                       containers,
                       linear,
                       casadi-bindings,
                       time,
                       base >=4.6 && < 5

  ghc-options:         -threaded -O2 -Wall -Werror -fwarn-redundant-constraints

executable spring
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             Spring.hs
  other-modules:       Dynoplot.Callback
                       Dynoplot.Channel
  default-language:    Haskell2010
  build-depends:       base >=4.6 && < 5
                     , dynobud
                     , dynobud-vectorize,
                       casadi-bindings
                     , vector
                     , generic-accessors
                     , bytestring
                     , zeromq4-haskell
                     , binary
  ghc-options:         -threaded -O2 -Wall -Werror -fwarn-redundant-constraints

executable rocket
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             Rocket.hs
  other-modules:       Dynoplot.Callback
                       Dynoplot.Channel
  default-language:    Haskell2010
  build-depends:       base >=4.6 && < 5
                     , dynobud
                     , dynobud-vectorize
                     , casadi-bindings
                     , containers
                     , linear
                     , vector
                     , generic-accessors
                     , bytestring
                     , zeromq4-haskell
                     , binary

  ghc-options:         -threaded -O2 -Wall -Werror -fwarn-redundant-constraints

executable easy-nlp
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             EasyNlp.hs
  default-language:    Haskell2010
  build-depends:       dynobud,
                       dynobud-vectorize,
                       vector >=0.10,
                       base >=4.6 && < 5
  ghc-options:         -threaded -O2 -Wall -Werror -fwarn-redundant-constraints

executable basic-nlp
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             BasicNlp.hs
  default-language:    Haskell2010
  build-depends:       dynobud,
                       dynobud-vectorize,
                       vector >=0.10,
                       casadi-bindings,
                       base >=4.6 && < 5
  ghc-options:         -threaded -O2 -Wall -Werror -fwarn-redundant-constraints

executable beginner-qp
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples/beginner
  main-is:             SimpleQp.hs
  default-language:    Haskell2010
  build-depends:       dynobud,
                       dynobud-vectorize,
                       base >=4.6 && < 5
  ghc-options:         -O2 -Wall -Werror -fwarn-redundant-constraints

executable dae-pendulum
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             DaePendulum.hs
  other-modules:       Dynoplot.Callback
                       Dynoplot.Channel
  default-language:    Haskell2010
  build-depends:       dynobud,
                       dynobud-vectorize,
                       base >=4.6 && < 5,
                       generic-accessors >= 0.1.0.0,
                       bytestring,
                       zeromq4-haskell,
                       binary,
                       vector
  ghc-options:         -threaded -O2 -Wall -Werror -fwarn-redundant-constraints

executable glider
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             Glider.hs
  other-modules:       Glider.Aircraft
                       Glider.AeroCoeffs
                       Glider.Betty
                       Dynoplot.Callback
                       Dynoplot.Channel
  default-language:    Haskell2010
  build-depends:       dynobud,
                       dynobud-vectorize,
                       base >=4.6 && < 5,
                       containers,
                       linear,
                       bytestring,
                       binary,
                       vector,
                       generic-accessors >= 0.1.0.0,
                       zeromq4-haskell
  ghc-options:         -threaded -O2 -Wall -Werror -fwarn-redundant-constraints

executable sailboat
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             Sailboat.hs
  default-language:    Haskell2010
  build-depends:       dynobud,
                       dynobud-typevecs,
                       dynobud-vectorize,
                       base >=4.6 && < 5,
                       containers,
                       linear,
                       bytestring,
                       binary,
                       vector,
                       semigroups,
                       generic-accessors >= 0.1.0.0,
                       zeromq4-haskell
  ghc-options:         -threaded -O2 -Wall -Werror -fwarn-redundant-constraints

executable dynoplot
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  other-modules:       Dynoplot.Channel
  main-is:             Dynoplot.hs
  default-language:    Haskell2010
  build-depends:       dynobud,
                       base >=4.6 && < 5,
                       containers,
                       vector,
                       binary,
                       bytestring,
                       zeromq4-haskell,
                       Plot-ho-matic >= 0.12.2.2,
                       cmdargs
  ghc-options:         -O2 -threaded -Wall -Werror -with-rtsopts=-T -fwarn-redundant-constraints

executable quadrature-test
  if flag(examples)
    Buildable: True
  else
    Buildable: False
  hs-source-dirs:      examples
  main-is:             Quadrature.hs
  other-modules:       Dynoplot.Callback
                       Dynoplot.Channel
  default-language:    Haskell2010
  build-depends:       dynobud,
                       dynobud-vectorize,
                       base >=4.6 && < 5,
                       generic-accessors >= 0.1.0.0,
                       bytestring,
                       zeromq4-haskell,
                       binary,
                       vector
  ghc-options:         -threaded -Wall -Werror -O2 -fwarn-redundant-constraints

--test-suite lp_tests
--  type: exitcode-stdio-1.0
--  hs-source-dirs:      tests
--  main-is:             OldTests.hs
--  default-language:    Haskell2010
--  build-depends:       dynobud,
--                       vector,
--                       linear,
--                       hmatrix-glpk,
--                       QuickCheck >= 2,
--                       HUnit,
--                       test-framework,
--                       test-framework-hunit,
--                       test-framework-quickcheck2,
--                       base >=4.6 && < 5
--  ghc-options:         -O2 -Wall -Werror -fwarn-redundant-constraints

--test-suite old-unit-tests
--  type: exitcode-stdio-1.0
--  hs-source-dirs:      tests
--  main-is:             UnitTests.hs
--  default-language:    Haskell2010
--  build-depends:       dynobud,
--                       QuickCheck >= 2,
--                       HUnit,
--                       test-framework,
--                       test-framework-hunit,
--                       test-framework-quickcheck2,
--                       hmatrix,
--                       hmatrix-glpk,
--                       vector,
--                       linear,
--                       MemoTrie,
--                       base >=4.6 && < 5
--  ghc-options:         -O2 -Wall -Werror -fwarn-redundant-constraints

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             NewUnitTests.hs
  other-modules:       ConditionalTests
                       FittingTests
                       MapTests
                       FunctionTests
                       LinearizeTests
                       QuadratureTests
                       IntegrationTests
                       InterpolantTests
                       VectorizeTests
                       ViewTests
                       Utils
  default-language:    Haskell2010
  build-depends:       dynobud,
                       dynobud-interpolant,
                       dynobud-typevecs,
                       dynobud-vectorize,
                       QuickCheck >= 2,
                       HUnit,
                       test-framework,
                       test-framework-hunit,
                       test-framework-quickcheck2,
                       containers,
                       vector,
                       linear,
                       binary,
                       casadi-bindings,
                       casadi-bindings-core,
                       hmatrix,
                       hmatrix-gsl,
                       TypeCompose,
                       base >=4.6 && < 5
  ghc-options:         -O2 -Wall -Werror -fwarn-redundant-constraints

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             Doctests.hs
  build-depends:       base >= 4 && < 5,
                       doctest >= 0.8
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -Werror -fwarn-redundant-constraints
  hs-source-dirs:      tests
